# briteplayer

./: Cargo.toml
glade/: briteplayer-base.glade  briteplayer-base.glade~
src/: main.rs  nav.rs  nav_old.rs  player.rs  universe.rs  universe_old.rs
src/core/: nav.rs
src/core/scene/: mod.rs  music.rs
src/core_ui/: mod.rs  universe.rs
src/core_ui/scene/: spacecasts.rs
src/scenes/: mod.rs  music.rs
src/views/: mod.rs
