[package]
name = "briteplayer"
version = "0.1.0"
authors = ["Devin Brite <devin@dwbrite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relm = "^0.20.0"
relm-derive = "^0.20.0"
gio = "0.9.0"
glib = "0.10.1"
gdk = "0.13.0"
pango = "0.9.0"
gstreamer = "0.16.1"
#crossbeam-channel = "0.4"

directories-next = "1.0.1"

[dependencies.gtk]
# requires libgtk-3-dev (so at least Ubuntu 18.04)
version = "0.9.0"
features = ["v3_20"]
