[package]
name = "briteplayer"
version = "0.1.0"
authors = ["Devin Brite <devin@dwbrite.com>"]
edition = "2018"

[dependencies]
linked-hash-map = "0.5.3"
linked_hash_set = "0.1.4"

gio = "0.9.0"
glib = "0.10.1"
gdk = "0.13.0"
pango = "0.9.0"
gstreamer = "0.16.1"
crossbeam-channel = "0.4"
directories-next = "1.0.1"

ncurses = "5.99.0"

[dependencies.gtk]
# requires libgtk-3-dev (so at least Ubuntu 18.04)
version = "0.9.0"
features = ["v3_20"]

[dependencies.rusqlite]
version = "0.21.0"
features = ["bundled"]
